--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ subprojects {
 		runtimeOnly 'org.postgresql:postgresql'
 
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testImplementation 'com.h2database:h2'
 
 		compileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
