--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,6 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-
-//version = '0.0.1-SNAPSHOT'
-
 allprojects {
 	group = 'pyler'
 
@@ -14,15 +11,14 @@ allprojects {
 		mavenCentral()
 	}
 }
-// Root 프로젝트 의존성
-dependencies {
 
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+// 루트 프로젝트 자체에는 빌드/실행이 필요 없음
+bootJar {
+	enabled = false
+}
 
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
+jar {
+	enabled = true
 }
 
 subprojects {
@@ -33,20 +29,18 @@ subprojects {
 	sourceCompatibility = '21'
 	targetCompatibility = '21'
 
+	// 모든 서브프로젝트 공통 의존성
 	dependencies {
-		// 모든 프로젝트에 공통 의존성
+		// 기본 공통 의존성
 		implementation 'org.springframework.boot:spring-boot-starter'
-		implementation 'org.springframework.boot:spring-boot-starter-web'
-		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-		implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-		runtimeOnly 'org.postgresql:postgresql'
-
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		testImplementation 'com.h2database:h2'
-
+		// 롬복
 		compileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
+
+		// 테스트
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testImplementation 'com.h2database:h2'
 	}
 
 	tasks.named('test') {
