--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,42 +4,71 @@ services:
     image: postgres:15.12-alpine3.21
     restart: always
     ports:
-      - "5432:5432"
+      - "15432:5432"
     environment:
       POSTGRES_DB: pyler_db
       POSTGRES_USER: pyler
       POSTGRES_PASSWORD: Pyler!@34
     volumes:
-      - "./plyer/data:/var/lib/postgresql/data"
+      - "./plyer-db-server/data:/var/lib/postgresql/data"
   pyler-redis:
     image: redis:alpine
     container_name: pyler-redis
+    command: ["redis-server", "--appendonly", "yes"]
+    restart: always
+    environment:
+      - TZ=Asia/Seoul
+      - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - "6379:6379"
+    volumes:
+      - "./pyler-redis/data:/data"
   pyler-jwt-server:
     container_name: pyler-jwt-server
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: pyler-jwt-server/Dockerfile
+    environment:
+      - TZ=Asia/Seoul
     restart: always
     volumes:
-      - ./logs/pyler-jwt-server:/app/logs
+      - ./logs/pyler-jwt-server:/app/pyler-jwt-server/logs
     ports:
       - "8080:8080"
     command: ["java", "-jar", "app.jar"] # 실행 명령어 설정
     depends_on:
       - pyler-db
+      - pyler-redis
   pyler-user-server:
     container_name: pyler-user-server
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: pyler-user-server/Dockerfile
+    environment:
+      - TZ=Asia/Seoul
     restart: always
     volumes:
-      - ./logs/pyler-user-server:/app/logs
+      - ./logs/pyler-user-server:/app/pyler-user-server/logs
     ports:
-      - "8080:8080"
+      - "8081:8081"
     command: [ "java", "-jar", "app.jar" ] # 실행 명령어 설정
     depends_on:
       - pyler-db
+      - pyler-jwt-server
+  pyler-imagehub-server:
+    container_name: pyler-imagehub-server
+    build:
+      context: .
+      dockerfile: pyler-imagehub-server/Dockerfile
+    environment:
+      - TZ=Asia/Seoul
+    restart: always
+    volumes:
+      - ./logs/pyler-imagehub-server:/app/pyler-imagehub-server/logs
+    ports:
+      - "8082:8082"
+    command: [ "java", "-jar", "app.jar" ] # 실행 명령어 설정
+    depends_on:
+      - pyler-db
+      - pyler-jwt-server
 
