--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - "6379:6379"
     volumes:
       - "./pyler-redis/data:/data"
+      - "./pyler-redis/redis.conf:/usr/local/etc/redis/redis.conf"
   pyler-jwt-server:
     container_name: pyler-jwt-server
     build:
@@ -65,6 +66,8 @@ services:
     restart: always
     volumes:
       - ./logs/pyler-imagehub-server:/app/pyler-imagehub-server/logs
+      - ./uploads:/app/uploads/
+      - ./thumbnail:/app/thumbnail/
     ports:
       - "8082:8082"
     command: [ "java", "-jar", "app.jar" ] # 실행 명령어 설정
