--- a/pyler-imagehub-server/src/main/resources/application.yml
+++ b/pyler-imagehub-server/src/main/resources/application.yml
@@ -26,6 +26,11 @@ spring:
       host: localhost
       port: 6379
 
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
+
 logging:
   level:
     root: info
@@ -42,5 +47,5 @@ jwt:
     url: http://pyler-jwt-server:8080
 
 file:
-  uploadDir: uploads/
-  thumbnailDir: thumbnail/
+  uploadDir: /app/uploads/
+  thumbnailDir: /app/thumbnail/
